--- a/config/sync/core.entity_form_display.node.page.default.yml
+++ b/config/sync/core.entity_form_display.node.page.default.yml
@@ -11,9 +11,9 @@ dependencies:
     - node.type.page
   module:
     - entity_browser_entity_form
+    - entity_reference_revisions
     - inline_entity_form
     - metatag
-    - paragraphs
     - text
 _core:
   default_config_hash: Cy5cg2L6ghXtZRwpVMt1QUd7AmwVXOq5F_y4ZUJa_TI
@@ -56,21 +56,13 @@ content:
     type: metatag_firehose
     region: content
   field_oc_widgets:
-    type: paragraphs
-    weight: 3
+    weight: 26
     settings:
-      title: Paragraph
-      title_plural: Paragraphs
-      edit_mode: closed
-      closed_mode: preview
-      autocollapse: all
-      add_mode: button
-      form_display_mode: default
-      default_paragraph_type: _none
-      features:
-        duplicate: duplicate
-        collapse_edit_all: collapse_edit_all
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
+    type: entity_reference_revisions_autocomplete
     region: content
   status:
     type: boolean_checkbox
