--- a/config/sync/field.field.node.page.field_oc_widgets.yml
+++ b/config/sync/field.field.node.page.field_oc_widgets.yml
@@ -1,4 +1,4 @@
-uuid: 18883f34-b9e0-41f1-82cf-e1a204e4973b
+uuid: 3b91b830-003a-4813-93ad-c9be6da84d7d
 langcode: en
 status: true
 dependencies:
@@ -8,8 +8,6 @@ dependencies:
     - paragraphs.paragraphs_type.basic_page_section
   module:
     - entity_reference_revisions
-_core:
-  default_config_hash: LjXaQOEt3yorudTqisFaETNMmvwpLe2c7KHUfig6eQU
 id: node.page.field_oc_widgets
 field_name: field_oc_widgets
 entity_type: node
@@ -17,7 +15,7 @@ bundle: page
 label: Widgets
 description: 'Add paragraphs to this node. Use the layout option on each paragraph to set its width and use the draggable handles to set the order to create custom paragraph grids.'
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
@@ -28,54 +26,48 @@ settings:
       basic_page_section: basic_page_section
     target_bundles_drag_drop:
       accordion_group:
-        weight: -47
-        enabled: false
-      block_placer:
-        weight: -47
+        weight: 16
         enabled: false
       accordion_item:
-        weight: -47
-        enabled: false
-      form:
-        weight: -44
-        enabled: false
-      image:
-        weight: -42
-        enabled: false
-      lightbox_gallery:
-        weight: -41
-        enabled: false
-      links_files:
-        weight: -40
-        enabled: false
-      slideshow:
-        weight: -38
-        enabled: false
-      text:
-        weight: -37
-        enabled: false
-      video:
-        weight: -36
-        enabled: false
-      pullquote:
-        weight: -35
-        enabled: false
-      event_by_category:
-        weight: -32
-        enabled: false
-      news_by_category:
-        weight: -30
+        weight: 17
         enabled: false
       basic_page_section:
         enabled: true
-        weight: 24
-      from_library:
-        weight: 24
+        weight: 18
+      block_placer:
+        weight: 19
         enabled: false
-      view_placer:
-        weight: 34
+      form:
+        weight: 20
+        enabled: false
+      from_library:
+        weight: 21
+        enabled: false
+      image:
+        weight: 22
         enabled: false
       landing_page_section:
-        weight: 36
+        weight: 23
+        enabled: false
+      lightbox_gallery:
+        weight: 24
+        enabled: false
+      links_files:
+        weight: 25
+        enabled: false
+      pullquote:
+        weight: 26
+        enabled: false
+      slideshow:
+        weight: 27
+        enabled: false
+      text:
+        weight: 28
+        enabled: false
+      video:
+        weight: 29
+        enabled: false
+      view_placer:
+        weight: 30
         enabled: false
 field_type: entity_reference_revisions
