block config and pl demo

--- a/config/sync/block.block.copyright.yml
+++ b/config/sync/block.block.copyright.yml
@@ -18,7 +18,7 @@ settings:
   id: 'block_content:27de869c-2ba8-4187-b40e-31c99519f508'
   label: Copyright
   provider: block_content
-  label_display: visible
+  label_display: '0'
   status: true
   info: ''
   view_mode: full
