--- a/composer.json
+++ b/composer.json
@@ -85,7 +85,7 @@
     "drupal/crop": "^2.0",
     "drupal/ctools": "^3.0@alpha",
     "drupal/default_content": "^1.0.0@alpha",
-    "drupal/devel": "1.2",
+    "drupal/devel": "^2.0",
     "drupal/easy_breadcrumb": "^1.6",
     "drupal/entity": "^1.0.0-rc1",
     "drupal/entity_browser": "^2.0.0",
@@ -124,7 +124,7 @@
     "drupal/video_embed_field": "^2.0",
     "drupal/video_embed_media": "^2.0",
     "drupal/views_infinite_scroll": "^1.5",
-    "drupal/webform": "^5.0",
+    "drupal/webform": "^5.1",
     "drupal/xmlsitemap": "^1.0@alpha",
     "drush/drush": "~8",
     "electriccitizen/docksal": "~1",
