--- a/composer.json
+++ b/composer.json
@@ -97,6 +97,7 @@
     "drupal/flippy": "1.x-dev",
     "drupal/focal_point": "~1",
     "drupal/geolocation": "^1.11",
+    "drupal/google_analytics": "^3.0",
     "drupal/hreflang": "^1.1",
     "drupal/image_style_quality": "^1.3",
     "drupal/inline_entity_form": "^1.0@beta",
