--- a/config/sync/webform.webform.contact.yml
+++ b/config/sync/webform.webform.contact.yml
@@ -1,4 +1,3 @@
-uuid: bb4d8c1f-afb2-4213-9c6d-bf02b072b18c
 langcode: en
 status: open
 dependencies:
@@ -7,11 +6,6 @@ dependencies:
       - webform
   module:
     - antibot
-third_party_settings:
-  antibot:
-    antibot: true
-_core:
-  default_config_hash: oZIx_IHS7gdveuJ3iSbhNY-A1FwlieWPdjJEJz4Wlb4
 open: null
 close: null
 weight: 0
@@ -39,6 +33,7 @@ settings:
   form_previous_submissions: true
   form_confidential: false
   form_confidential_message: ''
+  form_remote_addr: true
   form_convert_anonymous: false
   form_prepopulate: false
   form_prepopulate_source_entity: false
@@ -250,3 +245,9 @@ handlers:
       sender_mail: ''
       sender_name: ''
       theme_name: ''
+uuid: bb4d8c1f-afb2-4213-9c6d-bf02b072b18c
+third_party_settings:
+  antibot:
+    antibot: true
+_core:
+  default_config_hash: oZIx_IHS7gdveuJ3iSbhNY-A1FwlieWPdjJEJz4Wlb4
