Update widget titles in pl, gallery config tweaks

--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/gallery/gallery.yml
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/gallery/gallery.yml
@@ -28,5 +28,5 @@ images:
       http://placeimg.com/800/640/tech
 
 
-lightbox_instructions:
+gallery_instructions:
   "DRUPAL: This template is embedded in the drupal lightbox gallery paragraph template."
