--- a/config/sync/config_split.config_split.local.yml
+++ b/config/sync/config_split.config_split.local.yml
@@ -4,13 +4,13 @@ status: false
 dependencies: {  }
 id: local
 label: Local
+description: ''
 folder: ../config/local
 module:
   devel: 0
   devel_generate: 0
   kint: 0
   webform_devel: 0
-  webprofiler: 0
 theme: {  }
 blacklist: {  }
 graylist:
