--- a/config/sync/core.entity_form_display.paragraph.gallery.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.gallery.default.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - field.field.paragraph.gallery.field_admin_description
     - field.field.paragraph.gallery.field_gallery_type
-    - field.field.paragraph.gallery.field_oc_image_multi
+    - field.field.paragraph.gallery.field_image_multi
     - field.field.paragraph.gallery.field_widget_title
     - paragraphs.paragraphs_type.gallery
   module:
@@ -30,18 +30,18 @@ content:
     third_party_settings: {  }
     type: options_buttons
     region: content
-  field_oc_image_multi:
+  field_image_multi:
     weight: 2
     settings:
       form_mode: default
       label_singular: ''
       label_plural: ''
-      collapsed: true
       allow_new: true
       allow_existing: true
       match_operator: CONTAINS
       override_labels: false
       collapsible: false
+      collapsed: false
       allow_duplicate: false
     third_party_settings:
       entity_browser_entity_form:
