--- a/config/sync/core.entity_view_display.node.event.default.yml
+++ b/config/sync/core.entity_view_display.node.event.default.yml
@@ -6,10 +6,10 @@ dependencies:
     - field.field.node.event.body
     - field.field.node.event.field_banner
     - field.field.node.event.field_category
+    - field.field.node.event.field_date
     - field.field.node.event.field_event_location
     - field.field.node.event.field_event_pin_info
     - field.field.node.event.field_metatags
-    - field.field.node.event.field_oc_date
     - node.type.event
   module:
     - datetime
@@ -78,7 +78,26 @@ third_party_settings:
               context_mapping:
                 entity: layout_builder.entity
             additional: {  }
-            weight: 1
+            weight: 2
+          8474271f-64ef-448f-83bd-e59284858f0a:
+            uuid: 8474271f-64ef-448f-83bd-e59284858f0a
+            region: content
+            configuration:
+              id: 'field_block:node:event:field_date'
+              label: Date
+              provider: layout_builder
+              label_display: '0'
+              formatter:
+                label: hidden
+                type: datetime_default
+                settings:
+                  timezone_override: ''
+                  format_type: oc_short_date_time
+                third_party_settings: {  }
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 3
       -
         layout_id: layout_onecol
         layout_settings: {  }
@@ -187,6 +206,15 @@ content:
     third_party_settings: {  }
     type: entity_reference_label
     region: content
+  field_date:
+    weight: 5
+    label: above
+    settings:
+      format_type: medium
+      timezone_override: ''
+    third_party_settings: {  }
+    type: datetime_default
+    region: content
   field_event_location:
     weight: 3
     label: hidden
@@ -226,15 +254,6 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: metatag_empty_formatter
-    region: content
-  field_oc_date:
-    weight: 1
-    label: hidden
-    settings:
-      format_type: medium
-      timezone_override: ''
-    third_party_settings: {  }
-    type: datetime_default
     region: content
 hidden:
   addtoany: true
