--- a/config/sync/views.view.events.yml
+++ b/config/sync/views.view.events.yml
@@ -1,11 +1,10 @@
 uuid: 52cbf15c-00d8-4227-a49a-a63f5d523b82
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - field.storage.node.body
     - field.storage.node.field_banner
-    - field.storage.node.field_oc_date
     - node.type.event
     - taxonomy.vocabulary.categories
   module:
@@ -208,70 +207,6 @@ display:
           type: text_summary_or_trimmed
           settings:
             trim_length: 600
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          plugin_id: field
-        field_oc_date:
-          id: field_oc_date
-          table: node__field_oc_date
-          field: field_oc_date
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: ''
-          exclude: true
-          alter:
-            alter_text: true
-            text: '<div class="date">{{ field_oc_date }}</div>'
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: false
-          empty: ''
-          hide_empty: true
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: datetime_default
-          settings:
-            timezone_override: America/Chicago
-            format_type: oc_short_date_time
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -610,7 +545,6 @@ display:
       tags:
         - 'config:field.storage.node.body'
         - 'config:field.storage.node.field_banner'
-        - 'config:field.storage.node.field_oc_date'
   all_upcoming_events:
     display_plugin: embed
     id: all_upcoming_events
@@ -632,4 +566,3 @@ display:
       tags:
         - 'config:field.storage.node.body'
         - 'config:field.storage.node.field_banner'
-        - 'config:field.storage.node.field_oc_date'
