--- a/config/sync/core.entity_form_display.node.event.default.yml
+++ b/config/sync/core.entity_form_display.node.event.default.yml
@@ -7,10 +7,10 @@ dependencies:
     - field.field.node.event.body
     - field.field.node.event.field_banner
     - field.field.node.event.field_category
+    - field.field.node.event.field_date
     - field.field.node.event.field_event_location
     - field.field.node.event.field_event_pin_info
     - field.field.node.event.field_metatags
-    - field.field.node.event.field_oc_date
     - node.type.event
   module:
     - datetime
@@ -28,7 +28,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 3
+    weight: 4
     settings:
       rows: 9
       summary_rows: 3
@@ -54,10 +54,16 @@ content:
     type: inline_entity_form_complex
     region: content
   field_category:
-    weight: 4
+    weight: 3
     settings: {  }
     third_party_settings: {  }
     type: options_select
+    region: content
+  field_date:
+    weight: 2
+    settings: {  }
+    third_party_settings: {  }
+    type: datetime_default
     region: content
   field_event_location:
     weight: 5
@@ -107,12 +113,6 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: metatag_firehose
-    region: content
-  field_oc_date:
-    weight: 2
-    settings: {  }
-    third_party_settings: {  }
-    type: datetime_default
     region: content
   promote:
     type: boolean_checkbox
