--- a/config/sync/core.entity_view_display.paragraph.form.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.form.preview.yml
@@ -4,13 +4,12 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.paragraph.preview
-    - field.field.paragraph.form.field_admin_description
-    - field.field.paragraph.form.field_oc_form
+    - field.field.paragraph.form.field_form
     - field.field.paragraph.form.field_widget_title
     - paragraphs.paragraphs_type.form
   module:
     - layout_builder
-    - layout_discovery
+    - webform
 third_party_settings:
   layout_builder:
     sections: {  }
@@ -23,14 +22,15 @@ targetEntityType: paragraph
 bundle: form
 mode: preview
 content:
-  field_admin_description:
-    type: string
+  field_form:
+    type: webform_entity_reference_link
     weight: 0
+    region: content
     label: hidden
     settings:
-      link_to_entity: false
+      label: '[webform:title]'
+      dialog: ''
+      attributes: {  }
     third_party_settings: {  }
-    region: content
 hidden:
-  field_oc_form: true
   field_widget_title: true
