--- a/config/sync/core.entity_view_display.paragraph.gallery.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.gallery.default.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - field.field.paragraph.gallery.field_admin_description
     - field.field.paragraph.gallery.field_gallery_type
-    - field.field.paragraph.gallery.field_oc_image_multi
+    - field.field.paragraph.gallery.field_image_multi
     - field.field.paragraph.gallery.field_widget_title
     - paragraphs.paragraphs_type.gallery
   module:
@@ -28,14 +28,14 @@ content:
     third_party_settings: {  }
     type: boolean
     region: content
-  field_oc_image_multi:
+  field_image_multi:
+    type: entity_reference_entity_view
     weight: 2
     label: hidden
     settings:
       view_mode: full
       link: false
     third_party_settings: {  }
-    type: entity_reference_entity_view
     region: content
   field_widget_title:
     weight: 1
