--- a/config/sync/field.field.paragraph.gallery.field_image_multi.yml
+++ b/config/sync/field.field.paragraph.gallery.field_image_multi.yml
@@ -1,19 +1,19 @@
-uuid: 2fa9ca9a-8f8c-4336-b408-19bd55b87c76
+uuid: 1d933405-b91f-49c8-b852-a3b83a134100
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_oc_image_multi
+    - field.storage.paragraph.field_image_multi
     - media.type.image
     - paragraphs.paragraphs_type.gallery
-id: paragraph.gallery.field_oc_image_multi
-field_name: field_oc_image_multi
+id: paragraph.gallery.field_image_multi
+field_name: field_image_multi
 entity_type: paragraph
 bundle: gallery
 label: Images
 description: "Upload a new image or add an existing image from the media library. \r\n<br>\r\n<strong>If this will be a lightbox gallery:</strong> The image will be cropped into a thumbnail until it is opened in the lightbox. Use the focal point tool (crosshairs) to ensure that most important part of the image will be preserved in the crop area. Optimal image width is 800px<br>\r\n<strong>If this will be a slider gallery:</strong> Optimal image width should be 1200px."
-required: false
-translatable: true
+required: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
