--- a/config/sync/field.storage.node.field_date.yml
+++ b/config/sync/field.storage.node.field_date.yml
@@ -1,14 +1,12 @@
-uuid: c3d75e5c-411d-469d-97cf-7167d0e4a284
+uuid: fca115e5-212b-43bb-81c0-1735f6cb8046
 langcode: en
 status: true
 dependencies:
   module:
     - datetime
     - node
-_core:
-  default_config_hash: kv0sBLDwK0l_lSDbNxwNbV0pBBRxDmPD2bYgY0rWv_Q
-id: node.field_oc_date
-field_name: field_oc_date
+id: node.field_date
+field_name: field_date
 entity_type: node
 type: datetime
 settings:
